Fixed sys_platform == 'win32' for all windows

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -117,15 +117,15 @@ pyinstaller==6.12.0
 pyinstaller-hooks-contrib==2025.1
 PyMySQL==1.1.1
 pyparsing==3.1.4
-pypiwin32==223
-pystray==0.19.5
+pypiwin32==223 ; sys_platform == 'win32'
+pystray==0.19.5; sys_platform == 'win32'
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.2
 pywin32==306;sys_platform == 'win32'
-pywin32-ctypes==0.2.3
-pywinpty==2.0.13
+pywin32-ctypes==0.2.3; sys_platform == 'win32'
+pywinpty==2.0.13; sys_platform == 'win32'
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
