--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,177 +1,44 @@
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.6.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
-awscli==1.37.12
-awsebcli==3.21.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
+alembic==1.14.1
 blinker==1.9.0
-blis==1.0.2
-botocore==1.36.12
-catalogue==2.0.10
-cement==2.10.14
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.3.2
+cachelib==0.13.0
+captcha==0.7.1
 click==8.1.8
-cloudpathlib==0.20.0
 colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-configparser==7.2.0
-contourpy==1.3.0
-cycler==0.12.1
-cymem==2.0.10
-debugpy==1.8.6
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.9
-distro==1.9.0
-docutils==0.16
+Deprecated==1.2.18
+docutils==0.21.2
 et_xmlfile==2.0.0
-executing==2.1.0
-fastjsonschema==2.20.0
-filelock==3.16.1
 Flask==3.1.0
+Flask-Limiter==3.12
+Flask-Migrate==4.1.0
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
-fonttools==4.54.1
-fqdn==1.5.1
+Flask-WTF==1.2.2
+flask_session_captcha==1.5.0
 greenlet==3.1.1
 gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-icecream==2.1.3
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-ipykernel==6.29.5
-ipython==8.27.0
-isoduration==20.11.0
 itsdangerous==2.2.0
-jedi==0.19.1
 Jinja2==3.1.5
-jmespath==1.0.1
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver==1.4.7
-langcodes==3.5.0
-language_data==1.3.0
-marisa-trie==1.2.1
+limits==4.4.1
+Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistune==3.0.2
-moviepy==2.1.2
-murmurhash==1.0.11
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==2.2.1
-opencv-python==4.11.0.86
+msgspec==0.19.0
+numpy==2.2.3
 openpyxl==3.1.5
-overrides==7.7.0
+ordered-set==4.1.0
 packaging==24.2
 pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pathspec==0.10.1
-pefile==2023.2.7
-pillow==10.4.0
-platformdirs==4.3.6
-preshed==3.0.9
-proglog==0.1.10
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-psutil==6.0.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.10.3
-pydantic_core==2.27.1
-Pygments==2.18.0
-pyinstaller==6.12.0
-pyinstaller-hooks-contrib==2025.1
-PyMySQL==1.1.1
-pyparsing==3.1.4
-pypiwin32==223 ; sys_platform == 'win32'
-pystray==0.19.5; sys_platform == 'win32'
+pillow==11.1.0
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-pytz==2024.2
-pywin32==306;sys_platform == 'win32'
-pywin32-ctypes==0.2.3; sys_platform == 'win32'
-pywinpty==2.0.13; sys_platform == 'win32'
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
+pytz==2025.1
 rich==13.9.4
-rpds-py==0.20.0
-rsa==4.7.2
-s3transfer==0.11.2
-seaborn==0.13.2
-semantic-version==2.10.0
-Send2Trash==1.8.3
-setuptools==75.1.0
-shellingham==1.5.4
-shutils==0.1.0
 six==1.17.0
-smart-open==7.0.5
-sniffio==1.3.1
-soupsieve==2.6
-spacy==3.8.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.37
-srsly==2.5.0
-stack-data==0.6.3
-termcolor==2.5.0
-terminado==0.18.1
-thinc==8.3.2
-tinycss2==1.3.0
-tkcalendar==1.6.1
-tornado==6.4.1
-tqdm==4.67.1
-traitlets==5.14.3
-typer==0.15.1
-types-python-dateutil==2.9.0.20240906
+SQLAlchemy==2.0.38
+statistics==1.0.3.5
 typing_extensions==4.12.2
-tzdata==2024.2
-uri-template==1.3.0
-urllib3==1.26.20
-virtualenv==20.28.0
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
+tzdata==2025.1
 Werkzeug==3.1.3
-wrapt==1.17.0
+wrapt==1.17.2
+WTForms==3.2.1
