--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -18,12 +18,14 @@ greenlet==3.1.1
 gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+joblib==1.4.2
 limits==4.4.1
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 msgspec==0.19.0
+nltk==3.9.1
 numpy==2.2.3
 openpyxl==3.1.5
 ordered-set==4.1.0
@@ -33,10 +35,12 @@ pillow==11.1.0
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+regex==2024.11.6
 rich==13.9.4
 six==1.17.0
 SQLAlchemy==2.0.38
 statistics==1.0.3.5
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
 Werkzeug==3.1.3
